--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
   <header>
     <nav>
       <ul>
-        <li><a href="/"><span style="color:red">Home</span></a></li>
-        <li><a href="/intro"><span style="color:blue">Intro</span></a></li>
-        <li><a href="/about-us"><span style="color:green">About Us</span></a></li>
-        <li><a href="/more"><span style="color:purple">More</span></a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/intro">Intro</a></li>
+        <li><a href="/about-us">About Us</a></li>
+        <li><a href="/more">More</a></li>
       </ul>
       <form action="/search" method="get">
         <input type="text" name="q" placeholder="Search...">
         <button type="submit">Search</button>
       </form>
+      <ul style="list-style-type: none; margin: 0; padding: 0;">
+        <li style="display: inline-block;"><a href="/">Home</a></li>
+        <li style="display: inline-block;"><a href="/intro">Intro</a></li>
+        <li style="display: inline-block;"><a href="/about-us">About Us</a></li>
+        <li style="display: inline-block;"><a href="/more">More</a></li>
+      </ul>
     </nav>
   </header>
   <main>
