--- a/index.html
+++ b/index.html
@@ -209,17 +209,18 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
+            Hello, I'm Maazin Ahamed, a programmer, hacker, UI/UX designer, computer engineer, and software & web developer based in Matara, Sri Lanka.
+            I have a diverse skill set and a passion for technology.
             I enjoy
             turning complex problems into simple, beautiful and intuitive designs.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            With expertise in programming, hacking, UI/UX design, computer engineering,
+            and software & web development, I am equipped to tackle complex challenges,
+            create innovative solutions, and craft engaging user experiences.
+            Located in Matara, Sri Lanka, I draw inspiration from my surroundings to bring a unique perspective to my work.
+            If you have any questions or need assistance in any of these areas, feel free to reach out.
           </p>
         </section>
 
