--- a/index.html
+++ b/index.html
@@ -533,27 +533,28 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Programming & Hacking Course</h4>
 
-              <span>2007 — 2008</span>
+              <span>2018 — 2019</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Completed a comprehensive programming and
+                hacking course, acquiring knowledge and skills in
+                computer programming and ethical hacking.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Coding Languages Course</h4>
 
-              <span>2006 — 2007</span>
+              <span>2017 — 2018</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                Enrolled in a coding languages course, gaining
+                proficiency in various programming languages and 
+                learning the fundamentals of software development.
               </p>
 
             </li>
