--- a/index.html
+++ b/index.html
@@ -561,14 +561,14 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <h4 class="h4 timeline-item-title">Diploma in Software Development</h4>
 
               <span>2002 — 2004</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                Earned a diploma in software development 
+                covering a wide range of topics including software
+                engineering, algorithms, and software testing.
               </p>
 
             </li>
