--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-gy<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -689,7 +689,7 @@ gy<!DOCTYPE html>
       <article class="portfolio" data-page="portfolio">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Projects</h2>
         </header>
 
         <section class="projects">
@@ -929,7 +929,7 @@ gy<!DOCTYPE html>
       <article class="blog" data-page="blog">
 
         <header>
-          <h2 class="h2 article-title">Blog</h2>
+          <h2 class="h2 article-title">Blogs</h2>
         </header>
 
         <section class="blog-posts">
